--- a/src/index.html
+++ b/src/index.html
@@ -18,7 +18,7 @@
     <div id="root">
       <!-- React app content will be rendered here -->
     </div>
-
+    <!-- Include the JavaScript bundle -->
     <script src="./App"></script>
   </body>
 </html>
